vlib/v/checker/tests/if_expr_no_else.vv
fn main() {
	_ = if true {
		1
	}
}
